gccida/c0/assemble_string
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assemble_string/src/varasm.c:1816:12: error: use of undeclared identifier 'byte_8A1D50'
escape_0 = byte_8A1D50[*_ascii_bytes]; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assemble_string/src/varasm.c:1817:6: error: use of undeclared identifier 'byte_8A1D50'
if ( byte_8A1D50[*_ascii_bytes] ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assemble_string/src/varasm.c:1819:6: error: use of undeclared identifier 'byte_8A1D50'
if ( byte_8A1D50[*_ascii_bytes] == 1 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assemble_string/src/varasm.c:1848:10: error: use of undeclared identifier 'byte_8A1D50'
escape = byte_8A1D50[*_limited_str]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assemble_string/src/varasm.c:1849:6: error: use of undeclared identifier 'byte_8A1D50'
if ( byte_8A1D50[*_limited_str] ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assemble_string/src/varasm.c:1851:6: error: use of undeclared identifier 'byte_8A1D50'
if ( byte_8A1D50[*_limited_str] == 1 ) 
     ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assemble_string/src/obj/varasm.o] Error 1
